--- a/Lecture/Lab02.ipynb
+++ b/Lecture/Lab02.ipynb
@@ -1962,15 +1962,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "22 Jul 2025"
-      ],
-      "metadata": {
-        "id": "8kUVnoL3wXQj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "####```integer * char```mean multiple copies of the char หรือสามารถคูณตัวอักษรเพื่อแสดงผลเท่าผลคูณได้"
       ],
       "metadata": {
@@ -1980,48 +1971,48 @@
     {
       "cell_type": "code",
       "source": [
-        "[1,2,3]+[4,5,6]"
+        "[1,2]+[3,4]"
       ],
       "metadata": {
+        "id": "9jKUKXJyxHD6",
+        "outputId": "73247438-86a1-4057-8c19-30d25f2bbefc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "CGl8J48ywZ1K",
-        "outputId": "3089b936-f862-498d-d32e-d64633721d6d"
+        }
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[1, 2, 3, 4]"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(5*[1,2,3])"
+        "print(5*[1,2])"
       ],
       "metadata": {
+        "id": "B1B6Yi1VxM6G",
+        "outputId": "be86004a-46c2-4cc7-9fcc-8c5eb49bb21d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "V_wlFsoowlJE",
-        "outputId": "1c8d5b0d-cb1c-440d-afb8-2a524c238812"
+        }
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
+            "[1, 2, 1, 2, 1, 2, 1, 2, 1, 2]\n"
           ]
         }
       ]
@@ -2036,9 +2027,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4872335c-b5d4-4fe6-ed63-ed0176c70503"
+        "outputId": "aa48572f-8dbb-4afa-8305-08a219c564a8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2059,9 +2050,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40a58bf2-362e-4514-8f55-113ae9c57916"
+        "outputId": "46edcf1a-d21e-4d6a-8d42-7000d1d78ee2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2075,7 +2066,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Dictionary"
+        "## Dictionary `{}`"
       ],
       "metadata": {
         "id": "y3kAc5llEkqp"
@@ -2083,20 +2074,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dict_a = {'ant':27, 'bee':25, 'cat':79}"
+      ],
       "metadata": {
-        "id": "8VAhH2fawLyb"
+        "id": "ZaqjuhK6xQT1"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dIy7EXzGwLwI"
-      },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
