--- a/Data101_(dpdm25).ipynb
+++ b/Data101_(dpdm25).ipynb
@@ -4462,9 +4462,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Homework 5 ดึงตาราง\n",
-        "\n",
-        "'ผลงานตีพิมพ์ที่เกี่ยวข้อในฐาน ข้อมูล SCOPUS โดยไม่เอาตัวอย่าง' จากไฟล์ `การตีพิมพ์เผยแพร่ในวารสารที่อยู่ในฐาน` SCOPUS-.xlsx\n",
+        "## Homework 6 ดึงตาราง\n",
+        "ผลงานตีพิมพ์ที่เกี่ยวข้อในฐาน ข้อมูล SCOPUS โดยไม่เอาตัวอย่าง จากไฟล์ `การตีพิมพ์เผยแพร่ในวารสารที่อยู่ในฐาน` SCOPUS-.xlsx\n",
         "\n",
         "\n",
         "\n",
@@ -4483,7 +4482,7 @@
       "metadata": {
         "id": "-xow-NaVXnfW"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4499,7 +4498,7 @@
           "height": 1000
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5248,7 +5247,7 @@
           "height": 1000
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
