Midterm_find_Murderer_Mastermind

--- a/Data101_(dpdm25).ipynb
+++ b/Data101_(dpdm25).ipynb
@@ -34163,7 +34163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Find ฆาตกร"
+        "## Find Murderer"
       ],
       "metadata": {
         "id": "pO6l9yyW4Bie"
@@ -35527,7 +35527,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ข้อมูลฆาตกร"
+        "### Murderer's Information"
       ],
       "metadata": {
         "id": "ZAcnR314HeNv"
@@ -35541,7 +35541,7 @@
         "\n",
         "# Display\n",
         "for index, row in murderer_suspect.iterrows():\n",
-        "    print(f\"--- ข้อมูลของฆาตกร ---\")\n",
+        "    print(f\"--- Murder's Information ---\")\n",
         "\n",
         "    for col_name in column_names01:\n",
         "        print(f\"{col_name}: {row[col_name]}\")\n",
@@ -35553,15 +35553,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GyEVXvWHHdgY",
-        "outputId": "364d4bc5-24d6-40a0-818c-838e3508ae5a"
+        "outputId": "88ac9c19-ce37-4195-e32f-03ddb92a970f"
       },
-      "execution_count": 210,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- ข้อมูลของฆาตกร ---\n",
+            "--- Murder's Information ---\n",
             "id_x: 67318\n",
             "name: Jeremy Bowers\n",
             "license_id: 423327\n",
@@ -35858,7 +35858,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Find ผู้บงการ"
+        "## Find Mastermind"
       ],
       "metadata": {
         "id": "wtJEwAKK9V-O"
@@ -38747,7 +38747,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ข้อมูลผู้บงการ"
+        "### Mastermind Information"
       ],
       "metadata": {
         "id": "czm1KjZFIGi_"
@@ -38761,7 +38761,7 @@
         "\n",
         "# Display\n",
         "for index, row in concert_mastermind_suspects.iterrows():\n",
-        "    print(f\"--- ข้อมูลของผู้บงการ ---\")\n",
+        "    print(f\"--- Mastermind's Information ---\")\n",
         "\n",
         "    for col_name in column_names02:\n",
         "        print(f\"{col_name}: {row[col_name]}\")\n",
@@ -38769,19 +38769,19 @@
         "    print(\"-\" * 25)"
       ],
       "metadata": {
-        "id": "Z3ZSHEP5ICuQ",
-        "outputId": "95652354-ed64-479b-e80a-43d8d1d830a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z3ZSHEP5ICuQ",
+        "outputId": "49e71ce1-c744-4fd6-f500-f85e347467ce"
       },
-      "execution_count": 214,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- ข้อมูลของผู้บงการ ---\n",
+            "--- Mastermind's Information ---\n",
             "id_x: 202298\n",
             "age: 68\n",
             "height: 66\n",
@@ -38834,27 +38834,39 @@
         "\n",
         "# Display\n",
         "for index, row in murderer_suspect.iterrows():\n",
-        "    print(f\"--- ข้อมูลของฆาตกร ---\")\n",
+        "    print(f\"--- Murderer's Information ---\")\n",
         "\n",
         "    for col_name in column_names01:\n",
+        "        print(f\"{col_name}: {row[col_name]}\")\n",
+        "\n",
+        "    print(\"-\" * 25)\n",
+        "\n",
+        "# Prepare list of column names\n",
+        "column_names02 = concert_mastermind_suspects.columns.tolist()\n",
+        "\n",
+        "# Display\n",
+        "for index, row in concert_mastermind_suspects.iterrows():\n",
+        "    print(f\"--- Mastermind's Information ---\")\n",
+        "\n",
+        "    for col_name in column_names02:\n",
         "        print(f\"{col_name}: {row[col_name]}\")\n",
         "\n",
         "    print(\"-\" * 25)"
       ],
       "metadata": {
-        "id": "txcu5zQUH_6P",
-        "outputId": "3a99549e-e7be-4829-cb85-14f1be7cbbfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "txcu5zQUH_6P",
+        "outputId": "dd1ede48-9d51-4ff2-eda3-332d51e508d2"
       },
-      "execution_count": 213,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- ข้อมูลของฆาตกร ---\n",
+            "--- Murderer's Information ---\n",
             "id_x: 67318\n",
             "name: Jeremy Bowers\n",
             "license_id: 423327\n",
@@ -38870,40 +38882,8 @@
             "plate_number: 0H42W2\n",
             "car_make: Chevrolet\n",
             "car_model: Spark LS\n",
-            "-------------------------\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Prepare list of column names\n",
-        "column_names02 = concert_mastermind_suspects.columns.tolist()\n",
-        "\n",
-        "# Display\n",
-        "for index, row in concert_mastermind_suspects.iterrows():\n",
-        "    print(f\"--- ข้อมูลของผู้บงการ ---\")\n",
-        "\n",
-        "    for col_name in column_names02:\n",
-        "        print(f\"{col_name}: {row[col_name]}\")\n",
-        "\n",
-        "    print(\"-\" * 25)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dmpZbaWeE_Q4",
-        "outputId": "7d4fc79a-37c2-4db7-fc68-4ac91fc97822"
-      },
-      "execution_count": 212,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--- ข้อมูลของผู้บงการ ---\n",
+            "-------------------------\n",
+            "--- Mastermind's Information ---\n",
             "id_x: 202298\n",
             "age: 68\n",
             "height: 66\n",
